# GettingStartedWithQt5Cmake-Tutorial

./: CMakeLists.txt  README.md
Part1-HelloWorld/: CMakeLists.txt  main.cpp
Part2-HelloQt/: CMakeLists.txt  main.cpp  mainwindow.ui
Part3-SignalsSlots/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
